<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="kernel_performance_category"
        android:title="@string/kernel_performance_title" >
        
        <CheckBoxPreference
            android:key="input_boost_enabled"
            android:title="@string/input_boost_enabled_title_head"
            android:summary="@string/input_boost_enabled_summary_head"
            android:defaultValue="true" />

        <com.cyanogenmod.settings.device.InputBoostFreq
            android:key="input_boost_freq"
            android:title="@string/input_boost_freq_title"
            android:dialogTitle="@string/input_boost_freq_title"
            android:summary="@string/input_boost_freq_summary"
            android:persistent="false" />

        <com.cyanogenmod.settings.device.InputBoostTimeout
            android:key="input_boost_timeout"
            android:title="@string/input_boost_timeout_title_head"
            android:summary="@string/input_boost_timeout_summary_head"
            android:defaultValue="1500\n"
            android:dialogMessage="@string/input_boost_timeout_dialog_message"
            android:max="3000"
            custom:min="0" />

    </PreferenceCategory>

    <PreferenceCategory
            android:key="kernel_battery_category"
            android:title="@string/kernel_battery_title">

        <com.cyanogenmod.settings.device.PanelUndervolt
            android:key="panel_uv"
            android:title="@string/panel_undervolt_title"
            android:dialogTitle="@string/panel_undervolt_title"
            android:summary="@string/panel_undervolt_summary"
            android:persistent="false" />
    </PreferenceCategory>
</PreferenceScreen>
